# leekscript-env

./: .envrc  .gitignore  .gitmodules  Cargo.toml  Leek.toml  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.config/: config.toml
.github/workflows/: ci.yml  dependencies.yml
crates/leek_wars_gen/: Cargo.toml  build.rs
crates/leek_wars_gen/data/: wars_functions.toml
crates/leek_wars_gen/examples/: compare_rust_java_compile.rs  experiment_sample.toml
crates/leek_wars_gen/src/: compare_fuzz_cli.rs  config.rs  error.rs  fuzz.rs  fuzz_input.rs  harness.rs  lib.rs  main.rs  meta_entity.rs  meta_rankings.rs  output.rs  parity.rs  scenario.rs  scenario_io.rs
crates/leek_wars_gen/src/engine/: java.rs  mod.rs  rust.rs
crates/leek_wars_gen/src/experiment/: aggregate.rs  batch.rs  bench.rs  cache.rs  const_patch.rs  meta.rs  metrics.rs  mod.rs  optimize.rs  planner.rs  spec.rs  trace_summarize.rs
crates/leek_wars_gen/src/fight/: chips.rs  effects.rs  host.rs  java_bootstrap.rs  java_weight_open.rs  map.rs  mod.rs  pathfinding.rs  registry_ops.rs  rng.rs  run.rs  sig_globals.rs  start_order.rs  summons.rs  trace.rs  weapons.rs  world.rs
crates/leek_wars_gen/testdata/: scenario1_java_obstacles.json
crates/leek_wars_gen/tests/: experiment_trace_cap.rs  harness_all_scenarios.rs  harness_scenario1.rs  parity_java.rs  parity_java_rust_actions.rs  parity_java_rust_winner.rs  parity_scenario_corpus.rs  path_bootstrap_java.rs  rust_engine_scenario1.rs  scenario_rust_stress.rs
crates/leekscript-rs/: rust_out
crates/leekscript-rs/fuzz/: .gitignore  Cargo.toml  README.md  leek.dict  smoke.sh
crates/leekscript-rs/fuzz/corpus/pipeline/: seed_ai_style_entityish.leek  seed_ai_style_grid_accum.leek  seed_ai_style_math_utils.leek  seed_ai_style_turn_skeleton.leek  seed_class.leek  seed_leekfmt.leek  seed_let_and_match.leek  seed_loops.leek  seed_map_foreach.leek  seed_minimal_return.leek  seed_signature_stubs.sig.leek  seed_switch.leek  seed_try_catch.leek  seed_vm_arith.leek  seed_vm_natives.leek
crates/leekscript-rs/fuzz/fuzz_targets/: pipeline.rs
crates/leekscript-rs/fuzz/src/: lib.rs
crates/leekscript-rs/leekscript-cli/: Cargo.toml
crates/leekscript-rs/leekscript-cli/src/: args.rs  check.rs  format_cmd.rs  main.rs  merge_cmd.rs  report.rs  tree.rs
crates/leekscript_bench/: Cargo.toml
crates/leekscript_bench/src/: main.rs
crates/leekscript_config/: Cargo.toml
crates/leekscript_diagnostics/: Cargo.toml
crates/leekscript_directives/: Cargo.toml
crates/leekscript_fmt/: Cargo.toml
crates/leekscript_fmt/src/: lib.rs
crates/leekscript_fuzz/: Cargo.toml
crates/leekscript_fuzz/src/: lib.rs  mutate.rs
crates/leekscript_hir/: Cargo.toml
crates/leekscript_hir/src/: lib.rs  nodes.rs  refs.rs
crates/leekscript_hir/src/lower/: expr.rs  mod.rs  stmt.rs  util.rs
crates/leekscript_lexer/: Cargo.toml
crates/leekscript_parser/: Cargo.toml
crates/leekscript_parser/src/: ast.rs  emit.rs  lib.rs  parse.rs
crates/leekscript_run/: Cargo.toml  build.rs
crates/leekscript_run/src/: lib.rs  pipeline.rs  sig_workspace.rs
crates/leekscript_run/src/interp/: call.rs  context.rs  core_builtins.rs  env.rs  error.rs  exec.rs  expr.rs  flow.rs  host.rs  instance.rs  java_export.rs  java_log.rs  java_ops_budget.rs  lvalue.rs  map_store.rs  mod.rs  native.rs  ops.rs  ram.rs  util.rs  value.rs
crates/leekscript_run/tests/: java_vm_suite.rs
crates/leekscript_run/tests/java_vm_suite/: cases_generated.rs  java_vm_export_group_tests.inc.rs  runner.rs
crates/leekwars-api/: Cargo.toml  README.md
crates/leekwars-api/examples/: download_ais.rs
crates/leekwars-api/src/: ai.rs  ai_export.rs  auth.rs  client.rs  data.rs  encyclopedia.rs  error.rs  farmer.rs  fight.rs  garden.rs  history.rs  leek.rs  lib.rs  market.rs  message.rs  meta.rs  notification.rs  ranking.rs  team.rs  tournament.rs
crates/leekwars-api/tests/: integration_live.rs
crates/leekwars-cli/: Cargo.toml  batch.example.toml
crates/leekwars-cli/src/: cli.rs  commands.rs  config.rs  main.rs  output.rs  session.rs
crates/leekwars-cli/src/batch/: config.rs  mod.rs  run.rs  stats.rs  ui.rs
crates/leekwars-generator-rs/: Cargo.toml
crates/leekwars-generator-rs/src/: analyze.rs  batch.rs  field.rs  fight_report.rs  generator.rs  leekwars_vm.rs  lib.rs  main.rs  outcome.rs  registers.rs  scenario.rs  snapshot.rs  toml_bridge.rs  world_map.rs
crates/leekwars-generator-rs/src/batch/: batch.rs  mod.rs  report.rs
crates/leekwars-generator-rs/src/map/: field.rs  mod.rs  world_map.rs
crates/leekwars-generator-rs/src/persistence/: mod.rs  registers.rs
crates/leekwars-generator-rs/src/report/: enums.rs  fight_report.rs  mod.rs
crates/leekwars-generator-rs/src/snapshot/: mod.rs  snapshot.rs
crates/leekwars-generator-rs/src/util/: mod.rs  toml_bridge.rs
crates/leekwars-generator-rs/src/vm/: combat.rs  defs.rs  mod.rs  natives.rs  state.rs  types.rs
crates/leekwars-generator-rs/tests/: batch_toml_samples.rs  java_parity_diff.rs  java_parity_smoke.rs
crates/lek/: Cargo.toml
crates/lek/src/: check.rs  fmt.rs  lib.rs  main.rs  reporter.rs  run.rs  signatures.rs  toolchain_refs.rs
crates/lek/tests/: corpus_check.rs  fmt_cmd.rs  init_cmd.rs  registry_emit_refs.rs  run_cmd.rs  signatures_check.rs  signatures_sig_leek.rs  stdin_check.rs
crates/lw_meta/: Cargo.toml
crates/lw_meta/src/: api.rs  fetch.rs  lib.rs  main.rs  sim_export.rs  types.rs
docs/: README.md
docs/adr/: README.md  (+2 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: leek_wars_gen_rust_engine.rs  leekgen_compare_repro.rs  leekscript_toolchain.rs
scripts/: extract_java_vm_cases.py  gen_spec_appendices.py  generate_bench_corpus.py
sig/: std.sig.const.leek  std.sig.da.leek  std.sig.de.leek  std.sig.en.leek  std.sig.es.leek  std.sig.fi.leek  std.sig.fr.leek  std.sig.functions.leek  std.sig.hi.leek  std.sig.id.leek  std.sig.it.leek  std.sig.ja.leek  std.sig.ko.leek  std.sig.leek  std.sig.nl.leek  std.sig.no.leek  std.sig.pl.leek  std.sig.pt.leek  std.sig.ru.leek  std.sig.sv.leek  std.sig.zh.leek
tools/: generate_leek_api_signatures.py
(+3520 files in other folders)
