[workspace]
resolver = "2"
members = [
  "crates/sipha/sipha",
  "crates/leekscript-rs/leekscript",
  "crates/leekscript-rs/leekscript-cli",
  "crates/leekscript-rs/leekscript-lsp",
  "crates/leekwars-generator-rs",
]

[workspace.lints]

[workspace.lints.clippy]
result_large_err = "allow"
too_many_arguments = "allow"

