[workspace]
resolver = "2"
members = [
    "crates/leekscript_span",
    "crates/leekscript_diagnostics",
    "crates/leekscript_config",
    "crates/leekscript_directives",
    "crates/leekscript_lexer",
    "crates/leekscript_parser",
    "crates/leekscript_syntax",
    "crates/leekscript_fmt",
    "crates/leekscript_hir",
    "crates/leekscript_resolve",
    "crates/leekscript_signatures",
    "crates/leekscript_types",
    "crates/leekscript_run",
    "crates/leekscript_fuzz",
    "crates/leek_wars_gen",

    "crates/lek",
    "crates/leekscript_bench",
]

# `cargo fuzz` harness (kept out of normal workspace builds).
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
license = "MIT"

# Better runtime for `cargo run -p leekscript_bench --release` and other release binaries (slightly slower links).
[profile.release]
lto = "thin"
