[package]
name = "leek_wars_gen"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Leek Wars fight generation: scenario types, official generator parity runner, and a Rust engine stub"
repository = "https://github.com/leek-wars/leekscript-env"

[build-dependencies]
regex = "1"
toml = "0.8"

[lib]
name = "leek_wars_gen"
path = "src/lib.rs"

[[bin]]
name = "leekgen"
path = "src/main.rs"

[[bin]]
name = "leekgen-compare"
path = "src/bin/leekgen_compare.rs"

[[bin]]
name = "leekgen-fuzz"
path = "src/bin/leekgen_fuzz.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
diffy = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
leekscript_config = { path = "../leekscript_config" }
leekscript_run = { path = "../leekscript_run" }
leekscript_signatures = { path = "../leekscript_signatures" }
leekscript_fuzz = { path = "../leekscript_fuzz" }
