[package]
name = "leekscript_bench"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Compare Rust vs Java LeekScript run/export timings on the same source"

[[bin]]
name = "leekscript-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
owo-colors = "4"
regex = "1"
# `ansi`: correct column widths when cells contain ANSI (e.g. owo-colors); without it, borders misalign.
tabled = { version = "0.17", features = ["ansi"] }
leekscript_directives = { path = "../leekscript_directives" }
leekscript_run = { path = "../leekscript_run" }
