[package]
name = "leekscript_fuzz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "CST-aware LeekScript source mutation for fuzzing, with optional parse/compile filters"

[dependencies]
leekscript_lexer = { path = "../leekscript_lexer" }
leekscript_parser = { path = "../leekscript_parser" }
leekscript_syntax = { path = "../leekscript_syntax" }
leekscript_run = { path = "../leekscript_run" }
rand = "0.8"
rowan = "0.15"
thiserror = "1"
