[package]
name = "leekscript_hir"
version = "0.1.0"
edition.workspace = true
description = "High-level IR lowered from LeekScript rowan syntax trees"

[dependencies]
leekscript_span = { path = "../leekscript_span" }
leekscript_syntax = { path = "../leekscript_syntax" }
rowan = "0.15"

[dev-dependencies]
leekscript_lexer = { path = "../leekscript_lexer" }
leekscript_parser = { path = "../leekscript_parser" }
