[package]
name = "leekscript_run"
version = "0.1.0"
edition.workspace = true
description = "LeekScript compile pipeline and HIR interpreter (tree-walk; VM may follow)"

[build-dependencies]
regex = "1"

[dependencies]
leekscript_hir = { path = "../leekscript_hir" }
leekscript_resolve = { path = "../leekscript_resolve" }
leekscript_types = { path = "../leekscript_types" }
leekscript_config = { path = "../leekscript_config" }
leekscript_directives = { path = "../leekscript_directives" }
leekscript_lexer = { path = "../leekscript_lexer" }
leekscript_parser = { path = "../leekscript_parser" }
leekscript_span = { path = "../leekscript_span" }
leekscript_syntax = { path = "../leekscript_syntax" }
rowan = "0.15"
fastrand = "2"
serde_json = "1"
indexmap = "2"
ryu = "1"
num-format = "0.4"
regex = "1"
