[package]
name = "leekwars-api"
version = "0.1.0"
edition = "2024"
description = "HTTP client for the Leek Wars website API (unofficial)"
license = "MIT"

[lints]
workspace = true

[dependencies]
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["time"] }
url = "2"

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
