[package]
name = "leekwars-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for Leek Wars (unofficial API client)"
license = "MIT"

[[bin]]
name = "leekwars"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8"
dirs = "6"
dotenvy = "0.15"
leekscript = { path = "../leekscript-rs/leekscript" }
leekwars-api = { path = "../leekwars-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
toml = "0.8"
