[package]
name = "lw_meta"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI to fetch Leek Wars meta rankings (leeks, teams, compositions) and optional API catalog via service/get-all"
repository = "https://github.com/leek-wars/leekscript-env"
publish = false

[lib]
name = "lw_meta"
path = "src/lib.rs"

[[bin]]
name = "lw-meta"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = { version = "2", features = ["json"] }
