[package]
name = "leekscript-cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for the LeekScript parser and formatter"
license = "MIT"

[[bin]]
name = "leekscript"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
leekscript = { path = "../leekscript" }
miette = { version = "7.6", features = ["fancy"] }
sipha = { path = "../../sipha/sipha", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
